# libuma

./: CMakeLists.txt  readme.md  style.conf
cmake/: Findlibusb.cmake  cppcheck.cmake
include/libuma/: init.h  retcode.h
include/libuma/action/: credential.h  device.h
include/libuma/command/: original.h  type.h  utils.h
include/libuma/device/: handler.h  internal.h  transfer.h
include/libuma/usb/: message.h  sync.h
src/: retcode.c
src/command/: original.c  utils.c
src/device/: handler.c  transfer.c
src/include/moopass/commands/: definition.h
src/tools/generator/: command_definition.h  command_info.c  commands_generator.sh
src/usb/: sync.c
tools/cmd/: main.c
tools/list/: main.c
